# notebook

./: .env.example  README.md  pyproject.toml  requirements.txt
src/local_notebooklm/: __init__.py  app.py  bot.py  config.py  ingest.py  llm.py  retrieval.py  storage.py
